# DonkeyJet

./: .gitignore  .gitmodules  Dockerfile.base  Dockerfile.realsense  Dockerfile.ros2_ws  base.Dockerfile  buildkitd-amd64.toml  buildkitd-arm64.toml  buildkitd.toml  cudatest.Dockerfile  experminet.Dockerfile  readme.md  realsense.Dockerfile  realsense_latest.Dockerfile  ros2_base.Dockerfile  ros2_base2.Dockerfile  ros2_cheatsheet.md  ros2_humble.Dockerfile  ros2_ws.Dockerfile
hardware/: hardware_notes.md
hardware/encoder/: MyLibrary.bak  MyLibrary.kicad_sym  encoder.kicad_pcb  encoder.kicad_prl  encoder.kicad_pro  encoder.kicad_sch  encoder.step  encoder.wrl  fp-info-cache  fp-lib-table  pcb.blend  pcb.blend1  pcb.mtl
hardware/encoder/Library.pretty/: ATS668LSM.kicad_mod  ATS668LSM_1.kicad_mod
hardware/encoder/pcbway/02-second-try/: encoder-B_Cu.gbr  encoder-B_Mask.gbr  encoder-B_Paste.gbr  encoder-B_Silkscreen.gbr  encoder-Edge_Cuts.gbr  encoder-F_Cu.gbr  encoder-F_Mask.gbr  encoder-F_Paste.gbr  encoder-F_Silkscreen.gbr  encoder-PTH.drl  encoder-job.gbrjob
hardware/encoder/shapes3D/: ATS668LSMTN-T‎.wrl
hardware/teensy/teensy/: teensy.ino
notes/: docker.md  frames.gv  joystick.md  motors.md  realsense.md  realsense_issues.md  ros_base.md  rtab_map.md  test_docker_images.md
practices/: pca9685.cpp  read_teensy  read_teensy.cpp  simpleservo.py
practices/remote-buildkit/: Dockerfile  readme.md
ros2_ws/src/bot_hardware/: CMakeLists.txt  package.xml
ros2_ws/src/bot_hardware/include/rs_wrapper_lib/: rs_wrapper_lib.hpp
ros2_ws/src/bot_hardware/launch/: manual_control_launch.py
ros2_ws/src/bot_hardware/msg/: Control.msg  Joy2.msg
ros2_ws/src/bot_hardware/src/: joy.cpp  joy2pca9685.cpp  js_input.cpp  pca9685.cpp  realsense.cpp  rs_wrapper_lib.cpp
ros2_ws/src/bot_hardware/test/: realsense_test.cpp  rs_wrapper_lib_test.cpp
